chatbot/certificates.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: www
