chatbot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use.
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: chatbot-dev.fwu-bmi.online
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port: 
                  number: 5678
    - host: chatbot-staging.fwu-bmi.online
      http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo
                port: 
                  number: 5678

  tls:
    - hosts:
      - chatbot-dev.fwu-bmi.online
      - chatbot-staging.fwu-bmi.online
      secretName: www-tls
